--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Akib web</title>
-    <link rel="icon"type-"image/png" href="oop.png"/>
+    <link> rel="icon"type-"image/png" href="oop.png"</link>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
