--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <p class="card-text">I started my education in Sonamuni Pre-cadat school.From 2010 to 2014</p>
     <p class="card-text">Then I went to Ovedanondo government primary school.From 2015 to 2016 </p>
     <p class="card-text">Now,I will study in Kumarkhali M.N. Pilot Model High school.From 2017 to 2021 </p>
-    <a href="http://kumarkhalimnsecondaryschool.jessoreboard.gov.bd/8200/public-exam-result.html" class="btn btn-primary">Go somewhere</a>
+    <a href="http://kumarkhalimnsecondaryschool.jessoreboard.gov.bd" class="btn btn-primary">Go somewhere</a>
   </div>
   </div>
 <div class="container">
@@ -118,7 +118,7 @@
   <h4 class="card-title">Special thanks.</h4>
   <p class="card-text">Thanks for checking this web site.</p>
   <p class="card-text">Please click go somewhere to learn more.</p>
-  <a href="https://mbasic.facebook.com/akib.uzzaman.395?ref_component=mbasic_home_header&ref_page=%2Fwap%2Fhome.php&refid=8" class="btn btn-primary">Go somewhere</a>
+  <a href="https://www.facebook.com/akib.uzzaman.395" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
 </div>
