--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <!-- Favicons -->
   <link href="assets/img/logonw.png" rel="icon">
   <link href="assets/img/logonew.png" rel="apple-touch-icon">
-
+  <link href="assets/css/style.css" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-
+  <link href="assets/css/style.css" rel="stylesheet">
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
